crates/ui/tests/snapshots/panel_snapshots__risk_screen__danger_threshold.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 672
expression: risk_screen_summary(&c)
---
screen: risk
title: Risk and limits
section: Per-venue exposure
  binance BTCUSDT used=95 cap=100 band=DOWN_500
section: Daily loss
  used=60 cap=100 band=ACCENT
section: Kill threshold proximity
  age_ms=28500 timeout_ms=30000 band=DOWN_500
